# mystore

./: .env  Cargo.toml  docker-compose.yaml
frontend/src/: Main.elm
migrations/2020-01-07-115443_create_products/: up.sql
migrations/2020-01-08-202501_create_users/: up.sql
migrations/2020-01-08-204112_add_user_to_products/: up.sql
src/: db_connection.rs  errors.rs  main.rs  schema.rs
src/handlers/: authentication.rs  mod.rs  products.rs  register.rs
src/models/: product.rs  user.rs
src/utils/: jwt.rs
