[package]
name = "mystore"
version = "0.1.0"
authors = ["oleh.samokhvalov <oleh.samokhvalov@anvileight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.14.0"
dotenv_codegen="0.14.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
derive_more = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = "6"
bcrypt = "0.4.0"
chrono = { version = "0.4.6", features = ["serde"] }
env_logger = "0.6.1"
log = "0.4.6"
actix-http = "0.2.1"
actix-identity="0.1.0"

[dev-dependencies]
bytes = "0.4"
actix-http-test = "0.2.0"
